tests/syntax_error/python_style_for.jou
def main() -> int:
    n = 123
    for item in range(n):  # Error: Python-style for loops aren't supported. Use e.g. 'for i = 0; i < 10; i++'
        return 1
    return 0
